Fix word wrap on parent page and URL Alias on SEO tab

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PageTypeSelector/style.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PageTypeSelector/style.less
@@ -27,6 +27,9 @@
                 display: inline-block;
                 padding-left: 20px;
                 margin-right: 30px;
+                &.parent-page-name {
+                    word-break: break-all;
+                }
 
                 .dnn-radio-buttons ul li label {
                     margin-bottom: 0px;
